# MimirAI

./: Mimir.spec  README.md  pyproject.toml  requirements.txt
mimir/: __main__.py  app.py  assistant.py  audio.py  config.py  events.py  hotkeys.py  models.py  realtime.py  theme.py  ui.py  win32.py
scripts/: build.ps1
