[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project]
name = "mimir"
version = "1.1.5"
description = "A private, capture-safe Windows overlay that listens to your calls and conversations, transcribes them in real time, and surfaces instant AI guidance—only visible to you."
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.7.0",
    "numpy>=1.26.0",
    "openai>=1.55.0",
    "soundcard>=0.4.3",
    "websockets>=12.0",
    "keyring>=25.0.0",
    "pywin32>=306; platform_system == 'Windows'",
]

[project.scripts]
mimir = "mimir.__main__:main"

[tool.pyinstaller]
name = "Mimir"
